Added comments and changed some variable names

--- a/assets/flexgrid.scss
+++ b/assets/flexgrid.scss
@@ -7,8 +7,8 @@
 }
 
 .#{$prefix-class}container-fluid {
-  padding-right: $outer-margin;
-  padding-left: $outer-margin;
+  padding-right: $grid-outer-margin;
+  padding-left: $grid-outer-margin;
 }
 
 .#{$prefix-class}container{
