--- a/assets/includes/_variables.scss
+++ b/assets/includes/_variables.scss
@@ -1,21 +1,19 @@
-$gutter-width: 16px;
-$outer-margin: 32px;
-$gutter-compensation: ($gutter-width / 2) * -1;
-$half-gutter-width: $gutter-width / 0.5;
-$xs-min: 480px;
-$sm-min: 768px;
-$md-min: 992px;
-$lg-min: 1200px;
-$screen-xs-min: $xs-min;
-$screen-sm-min: $sm-min;
-$screen-md-min: $md-min;
-$screen-lg-min: $lg-min;
-$container-sm: $sm-min + $gutter-width;
-$container-md: $md-min + $gutter-width;
-$container-lg: $lg-min + $gutter-width;
+//Prefix to avoid conflicts with other Frameworks
+$prefix-class: "flex-";
 
 //Grid variables
 $grid-columns: 12;
-$grid-gutter-width: $gutter-width;
+$grid-gutter-width: 16px;
+$grid-outer-margin: 32px;
 
-$prefix-class: "flex-";
+//Breakpoints
+$screen-xs-min: 480px;
+$screen-sm-min: 768px;
+$screen-md-min: 992px;
+$screen-lg-min: 1200px;
+
+//Calculations
+$container-sm: $screen-sm-min + $grid-gutter-width;
+$container-md: $screen-md-min + $grid-gutter-width;
+$container-lg: $screen-lg-min + $grid-gutter-width;
+$gutter-compensation: ($grid-gutter-width / 2) * -1;
