--- a/assets/flexgrid.scss
+++ b/assets/flexgrid.scss
@@ -32,6 +32,7 @@
   flex-direction: column-reverse;
 }
 
+//Create grid columns
 @include make-grid-columns(xs);
 @include make-grid(xs);
 @include make-helpers(xs);
